<resources>
    <string name="app_name">M3</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="sign_up_txt">Don\'t have an account? SIGN UP</string>
    <string name="explore">EXPLORE</string>
    <string name="home">HOME</string>
    <string name="my_favorites">MY FAVORITES</string>
    <string name="my_playlists">MY PLAYLISTS</string>
    <string name="logout">LOGOUT</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="search_hint">Search</string>
    <string name="search">SEARCH</string>
    <string name="no_results">No search results for: </string>
    <string name="create_playlist">Create Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_name_field">Playlist Name:</string>
    <string name="next">NEXT</string>
    <string name="empty_playlist_msg">There are no songs in your playlist yet. Try searching for new songs!</string>
    <string name="cancel">Cancel</string>
    <string name="continue_txt">continue</string>
    <string name="title_activity_username">UsernameActivity</string>
    <string name="done">done</string>

</resources>
