<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGreen"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp" />

    <EditText
        android:id = "@+id/email"
        android:layout_width = "250dp"
        android:layout_height = "wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        />

    <EditText
        android:id = "@+id/password"
        android:layout_width = "250dp"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        />

    <Button
        android:id = "@+id/login_btn"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text = "@string/login"
        android:textColor="@color/colorGreen"
        android:background="@drawable/shape"
        />

    <Button
        android:id = "@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up_txt"
        android:textColor="@color/colorWhite"
        android:background="?android:attr/selectableItemBackground"
        />

</LinearLayout>