<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlaylistActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_playlist"
            android:textSize="30sp"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:padding="25dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/playlist_name_field"
                android:textSize="18sp"
                android:textColor="@color/colorGray"
                android:gravity="center_vertical"/>

            <EditText
                android:id = "@+id/playlist_name_text"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:inputType="text"
                android:hint="@string/playlist_name"
                android:text="@string/new_playlist"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/colorGray"
                android:textColor="@color/colorGray"
                android:backgroundTint="@color/colorGray"
                />
        </LinearLayout>

        <Button
            android:id = "@+id/next_button"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal"
            android:text = "@string/next"
            android:textColor="@color/colorWhite"
            android:background="@drawable/searchbar"
            />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        app:headerLayout="@layout/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start"
        android:id="@+id/nv"
        app:itemTextColor="@color/colorGray">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>