<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmptyPlaylistActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/playlist_name"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:padding="25dp"
            />

        <ImageView
            android:src="@mipmap/empty_icon"
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/empty_playlist_msg"
            android:textColor="@color/colorGray"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="25dp"
            />


        <Button
            android:id = "@+id/search_button"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity="center_horizontal"
            android:text = "@string/search"
            android:textColor="@color/colorWhite"
            android:background="@drawable/searchbar"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        app:headerLayout="@layout/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start"
        android:id="@+id/nv"
        app:itemTextColor="@color/colorGray">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>